--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/doct.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Home</title>
 </head>
 <body>
